# AirBnb_Data_Engineer_Project_with_Snowflake_DBT

./: .gitignore  README.md  dashboard.py  index.html  pyproject.toml  requirements.txt
aws_dbt_snowflake_project/: .gitignore  ExampleProfiles.yml  dbt_project.yml
aws_dbt_snowflake_project/analyses/: if_else.sql  loop.sql
aws_dbt_snowflake_project/macros/: generate_schema_name.sql  multiply.sql  tag.sql
aws_dbt_snowflake_project/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql
aws_dbt_snowflake_project/models/gold/: fact.sql  obt.sql
aws_dbt_snowflake_project/models/gold/ephemeral/: bookings.sql  hosts.sql  listings.sql
aws_dbt_snowflake_project/models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql
aws_dbt_snowflake_project/models/sources/: sources.yml
aws_dbt_snowflake_project/snapshots/: dim_bookings.yml  dim_hosts.yml  dim_listings.yml
aws_dbt_snowflake_project/tests/: source_tests.sql
