[project]
name = "aws-dbt-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.11.6",
    "dbt-snowflake>=1.11.2",
    "sqlfmt>=0.0.3",
    "streamlit>=1.32.0",
    "snowflake-connector-python>=3.6.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]
